# rustapi

./: .env  .gitignore  .vercelignore  Cargo.toml  Cargo.toml.wipe  IMPLEMENTATION_PLAN.md  README.md  answer.json  check_db_keys.js  config.env  drop_db.js  fix_db.js  fix_db.py  games.json  package-lock.json  package.json  session.json  test_api.dart  test_deepgram.js  test_deserialize.rs  test_games.py  test_payload.js  vercel.json  wipe_db.rs
admin-panel/: index.html  package-lock.json  package.json  vite.config.ts
admin-panel/src/: App.tsx  index.css
admin-panel/src/components/: NotificationPopover.tsx  (+1 more)
api/: index.rs
scratch/: check_assets.js  check_assets.py  test_get_assets.js
src/: admin_handlers.rs  admin_middleware.rs  auth.rs  content_handlers.rs  content_models.rs  game_handlers.rs  handlers.rs  interview_handlers.rs  interview_models.rs  interview_session_handlers.rs  lib.rs  main.rs  middleware.rs  models.rs  monetization_handlers.rs  monetization_models.rs  progress_handlers.rs  progress_models.rs  rating_handlers.rs  rating_models.rs  seed.rs  storage.rs  swagger.rs
src/admin/: handlers.rs  middleware.rs
src/ai/: evaluation.rs  handlers.rs  mod.rs  models.rs  service.rs
src/analytics/: handlers.rs  models.rs
src/content/: handlers.rs  models.rs
src/ebook/: handlers.rs  mod.rs  models.rs
src/game/: handlers.rs  mod.rs  models.rs  session_handlers.rs  voice_scoring.rs
src/interview/: handlers.rs  mod.rs  models.rs  session_handlers.rs
src/monetization/: handlers.rs  models.rs
src/notification/: handlers.rs  mod.rs
src/progress/: handlers.rs  models.rs
src/rating/: handlers.rs
src/session/: handlers.rs  models.rs
src/speaking/: agent.rs  feedback.rs  handlers.rs  mod.rs  models.rs
src/speaking_ai/: elevenlabs_stt.rs  groq.rs  handlers.rs  mod.rs  models.rs
src/speakup/: engine.rs  handlers.rs  mod.rs  models.rs
src/video_drill/: handlers.rs  models.rs
src/vocab/: handlers.rs  mod.rs  models.rs  student_handlers.rs
src/voice/: deepgram.rs  elevenlabs.rs  handlers.rs  mod.rs  models.rs  traits.rs
(+76 files in other folders)
