[package]
name = "rustapi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
mongodb = "3.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
vercel_runtime = "2"

[[bin]]
name = "index"
path = "api/index.rs"

[[bin]]
name = "rustapi-local"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

