[package]
name = "rustapi"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
mongodb = "3.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bson = "2.0"
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
dotenvy = "0.15"
tower-http = { version = "0.5", features = ["cors"] }
tower = { version = "0.5", features = ["util"] }
vercel_runtime = "2"
http-body-util = "0.1"
futures = "0.3"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
gcp_auth = "0.12.6"

[[bin]]
name = "index"
path = "api/index.rs"

[[bin]]
name = "rustapi-local"
path = "src/main.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3

